--- a/processador-services/pom.xml
+++ b/processador-services/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.tsswebapps</groupId>
-	<artifactId>processador-services</artifactId>
+	<artifactId>processador</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>processador-services</name>
+	<name>processador</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
